[gd_scene load_steps=23 format=3 uid="uid://bstyynx7prws4"]

[ext_resource type="Script" path="res://levels/main_menu/main_menu.gd" id="1_syius"]
[ext_resource type="Script" path="res://levels/main_menu/logo.gd" id="2_1oi3j"]
[ext_resource type="Texture2D" uid="uid://gpwuqmk8kk7r" path="res://levels/main_menu/main_menu.png" id="2_ipw4m"]
[ext_resource type="Texture2D" uid="uid://bfyni2ocd0c38" path="res://levels/main_menu/assets/Title_B.png" id="4_tk3re"]
[ext_resource type="Texture2D" uid="uid://cdh0e0rpnde36" path="res://levels/main_menu/assets/Title_e1.png" id="5_3cynk"]
[ext_resource type="Texture2D" uid="uid://jw2ubvs721bm" path="res://levels/common/resources/double_note_white.png" id="5_24q5q"]
[ext_resource type="Shader" path="res://levels/main_menu/assets/snow.gdshader" id="5_rihck"]
[ext_resource type="Texture2D" uid="uid://crqvdisfnwg86" path="res://levels/main_menu/assets/Title_a.png" id="6_ge6ni"]
[ext_resource type="Texture2D" uid="uid://cph0w3hqc4rnn" path="res://levels/main_menu/assets/Title_t.png" id="7_rqu0e"]
[ext_resource type="Texture2D" uid="uid://cf5nllx67quyd" path="res://levels/main_menu/assets/Title_o.png" id="8_ku56w"]
[ext_resource type="Texture2D" uid="uid://megkuu5o0pl4" path="res://levels/main_menu/assets/Title_f1.png" id="9_mkufw"]
[ext_resource type="Texture2D" uid="uid://dnd5ivtyvlack" path="res://levels/main_menu/assets/Title_L.png" id="10_tuu8r"]
[ext_resource type="Texture2D" uid="uid://7myjrx3c2mf6" path="res://levels/main_menu/assets/Title_i.png" id="11_eopbj"]
[ext_resource type="Texture2D" uid="uid://isjnjco2yhb3" path="res://levels/main_menu/assets/Title_f2.png" id="12_vm3uj"]
[ext_resource type="Texture2D" uid="uid://chwcdqlecj4x" path="res://levels/main_menu/assets/Title_e2.png" id="13_1ibpm"]
[ext_resource type="Shader" path="res://levels/main_menu/assets/letter_background.gdshader" id="13_d8ufv"]
[ext_resource type="AudioStream" uid="uid://bhqppvs6lp8ku" path="res://levels/main_menu/main_menu.wav" id="17_7juqv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5v00a"]
shader = ExtResource("13_d8ufv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o23k3"]
shader = ExtResource("5_rihck")
shader_parameter/alpha_factor = 0.0

[sub_resource type="Curve" id="Curve_xjwnw"]
max_value = 3.0
_data = [Vector2(0, 1.13546), 0.0, -1.49163, 0, 0, Vector2(1, 0.2749), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7q0rf"]
curve = SubResource("Curve_xjwnw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_20nyr"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(1200, 0, 0)
emission_shape = 3
emission_box_extents = Vector3(1200, 0, 1)
direction = Vector3(-1, 1, 0)
spread = 10.0
initial_velocity_min = 200.0
initial_velocity_max = 400.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
scale_over_velocity_max = 1000.0
scale_over_velocity_curve = SubResource("CurveTexture_7q0rf")
turbulence_enabled = true
turbulence_noise_strength = 0.25
turbulence_influence_min = 0.0
turbulence_influence_max = 0.001

[node name="MainMenuImTakingOver" type="Node"]
script = ExtResource("1_syius")
play_scene_path = "res://levels/level_select/level_select.tscn"
options_scene_path = "res://dummy_options_menu.tscn"

[node name="TextureRectAnchor" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -63.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ipw4m")
expand_mode = 3
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="TextureRectParallax" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 560.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ipw4m")
expand_mode = 3
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="NEEDS STYLING SOMEONE HELP ME" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -471.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.280782, 0.0874114, 0.086661, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_font_sizes/font_size = 30
text = "Press any button to continue!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo" type="Node" parent="."]
script = ExtResource("2_1oi3j")

[node name="Background" type="ColorRect" parent="Logo"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0117021, 0.0117021, 0.0117021, 1)
metadata/_edit_lock_ = true

[node name="WordsBackground" type="Control" parent="Logo"]
visible = false
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -792.0
offset_top = -92.0
offset_right = -92.0
offset_bottom = 608.0
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(350, 350)
mouse_filter = 2

[node name="Beat" type="Control" parent="Logo/WordsBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="B" type="TextureRect" parent="Logo/WordsBackground/Beat"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = -296.25
offset_top = -292.5
offset_right = -90.25
offset_bottom = -6.5
texture = ExtResource("4_tk3re")
stretch_mode = 5

[node name="e" type="TextureRect" parent="Logo/WordsBackground/Beat"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = -141.25
offset_top = -248.75
offset_right = 47.75
offset_bottom = -61.75
texture = ExtResource("5_3cynk")
stretch_mode = 5

[node name="a" type="TextureRect" parent="Logo/WordsBackground/Beat"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = 11.25
offset_top = -253.75
offset_right = 227.25
offset_bottom = -54.75
texture = ExtResource("6_ge6ni")
stretch_mode = 5

[node name="t" type="TextureRect" parent="Logo/WordsBackground/Beat"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = 171.25
offset_top = -356.25
offset_right = 387.25
offset_bottom = 24.75
texture = ExtResource("7_rqu0e")
stretch_mode = 5

[node name="of" type="Control" parent="Logo/WordsBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="o" type="TextureRect" parent="Logo/WordsBackground/of"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = -72.5
offset_top = -53.75
offset_right = 143.5
offset_bottom = 327.25
scale = Vector2(0.39, 0.39)
texture = ExtResource("8_ku56w")
stretch_mode = 5

[node name="f" type="TextureRect" parent="Logo/WordsBackground/of"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = 6.24997
offset_top = -63.75
offset_right = 222.25
offset_bottom = 317.25
scale = Vector2(0.385, 0.385)
texture = ExtResource("9_mkufw")
stretch_mode = 5

[node name="Life" type="Control" parent="Logo/WordsBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="L" type="TextureRect" parent="Logo/WordsBackground/Life"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = -290.0
offset_top = 12.5
offset_right = -74.0
offset_bottom = 393.5
texture = ExtResource("10_tuu8r")
stretch_mode = 5

[node name="i" type="TextureRect" parent="Logo/WordsBackground/Life"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = -116.25
offset_top = 111.25
offset_right = 28.75
offset_bottom = 393.25
texture = ExtResource("11_eopbj")
stretch_mode = 5

[node name="f" type="TextureRect" parent="Logo/WordsBackground/Life"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = -45.0
offset_top = 85.0
offset_right = 171.0
offset_bottom = 466.0
texture = ExtResource("12_vm3uj")
stretch_mode = 5

[node name="e" type="TextureRect" parent="Logo/WordsBackground/Life"]
material = SubResource("ShaderMaterial_5v00a")
layout_mode = 0
offset_left = 110.0
offset_top = 7.5
offset_right = 326.0
offset_bottom = 388.5
texture = ExtResource("13_1ibpm")
stretch_mode = 5

[node name="Words" type="Control" parent="Logo"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -800.0
offset_top = -100.0
offset_right = -100.0
offset_bottom = 600.0
grow_horizontal = 0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(350, 350)
mouse_filter = 2

[node name="Beat" type="Control" parent="Logo/Words"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="B" type="TextureRect" parent="Logo/Words/Beat"]
layout_mode = 0
offset_left = -296.25
offset_top = -292.5
offset_right = -90.25
offset_bottom = -6.5
texture = ExtResource("4_tk3re")
stretch_mode = 5

[node name="e" type="TextureRect" parent="Logo/Words/Beat"]
layout_mode = 0
offset_left = -141.25
offset_top = -248.75
offset_right = 47.75
offset_bottom = -61.75
texture = ExtResource("5_3cynk")
stretch_mode = 5

[node name="a" type="TextureRect" parent="Logo/Words/Beat"]
layout_mode = 0
offset_left = 11.25
offset_top = -253.75
offset_right = 227.25
offset_bottom = -54.75
texture = ExtResource("6_ge6ni")
stretch_mode = 5

[node name="t" type="TextureRect" parent="Logo/Words/Beat"]
layout_mode = 0
offset_left = 171.25
offset_top = -356.25
offset_right = 387.25
offset_bottom = 24.75
texture = ExtResource("7_rqu0e")
stretch_mode = 5

[node name="of" type="Control" parent="Logo/Words"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="o" type="TextureRect" parent="Logo/Words/of"]
layout_mode = 0
offset_left = -72.5
offset_top = -53.75
offset_right = 143.5
offset_bottom = 327.25
scale = Vector2(0.39, 0.39)
texture = ExtResource("8_ku56w")
stretch_mode = 5

[node name="f" type="TextureRect" parent="Logo/Words/of"]
layout_mode = 0
offset_left = 6.24997
offset_top = -63.75
offset_right = 222.25
offset_bottom = 317.25
scale = Vector2(0.385, 0.385)
texture = ExtResource("9_mkufw")
stretch_mode = 5

[node name="Life" type="Control" parent="Logo/Words"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="L" type="TextureRect" parent="Logo/Words/Life"]
layout_mode = 0
offset_left = -290.0
offset_top = 12.5
offset_right = -74.0
offset_bottom = 393.5
texture = ExtResource("10_tuu8r")
stretch_mode = 5

[node name="i" type="TextureRect" parent="Logo/Words/Life"]
layout_mode = 0
offset_left = -116.25
offset_top = 111.25
offset_right = 28.75
offset_bottom = 393.25
texture = ExtResource("11_eopbj")
stretch_mode = 5

[node name="f" type="TextureRect" parent="Logo/Words/Life"]
layout_mode = 0
offset_left = -45.0
offset_top = 85.0
offset_right = 171.0
offset_bottom = 466.0
texture = ExtResource("12_vm3uj")
stretch_mode = 5

[node name="e" type="TextureRect" parent="Logo/Words/Life"]
layout_mode = 0
offset_left = 110.0
offset_top = 7.5
offset_right = 326.0
offset_bottom = 388.5
texture = ExtResource("13_1ibpm")
stretch_mode = 5

[node name="Foreground" type="ColorRect" parent="Logo"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.10352e-05
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.778445, 0.778446, 0.778445, 0)
metadata/_edit_lock_ = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_o23k3")
position = Vector2(0, -80)
amount = 32
process_material = SubResource("ParticleProcessMaterial_20nyr")
texture = ExtResource("5_24q5q")
lifetime = 10.0
preprocess = 5.0
visibility_rect = Rect2(0, 0, 1920, 1080)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_7juqv")
autoplay = true

[connection signal="finished" from="Logo" to="." method="_on_logo_finished"]
